<resources>
    <string name="app_name">Snipe</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="hint_country_code">+91</string>
    <string name="text_continue">Continue</string>
    <string name="hint_otp_here">OTP here</string>
    <string name="text_invalid_phone">Enter Valid Phone number</string>
    <string name="text_invalid_otp">Entered OTP is Invalid</string>
    <string name="text_sign_in">Sign In with your Phone</string>
    <string name="text_enter_otp_received">Enter OTP Received</string>
    <string name="text_new_registration">New Here? Register Now</string>

    <!-- Offline Store -->
    <string name="STORE">STORE</string>
    <string name="KEY_PROFILE_UPDATED">KEY_PROFILE_UPDATED</string>
    <string name="KEY_FCM_UPDATED">KEY_FCM_UPDATED</string>
    <string name="KEY_FCM_TOKEN">KEY_FCM_TOKEN</string>

    <string name="hint_name">Name</string>
    <string name="hint_type_message">Type Message</string>
    <string name="description_icon">icon</string>
    <string name="search_title">Search</string>
    <string name="hint_enter_name">Enter Name</string>
    <string name="description_placeholder">placeholder</string>
    <string name="hint_username">Username</string>
    <string name="error_invalid_name">Enter Valid Name</string>
    <string name="error_invalid_username">Enter Valid Username</string>
    <string name="errror_duplicate_username">Username Already Exists, try another</string>
    <string name="error_no_internet">No Internet</string>
    <string name="error_try_again">Try Again</string>
    <string name="helper_name">This will be the name displayed for your chat recipients</string>
    <string name="helper_username">This will be your unique identified name used to search for you</string>
    <string name="prompt_offline">You are Offline</string>
    <string name="prompt_online">You are back Online</string>
    <string name="text_messages">Your Messages</string>
    <string name="menu_view_profile">View Profile</string>
</resources>