<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.fragments.RequestOtpFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/signInText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_sign_in"
        style="@style/login_text_style"
        android:layout_margin="@dimen/material_padding"
        app:layout_constraintBottom_toTopOf="@id/phone_container"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phone_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_phone_number"
        app:prefixText="@string/hint_country_code"
        android:layout_margin="@dimen/material_padding"
        app:layout_constraintBottom_toTopOf="@id/button_submit">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="15"
            android:inputType="phone"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_submit"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_continue"
        android:layout_marginStart="@dimen/material_padding"
        android:layout_marginEnd="@dimen/material_padding"
        android:layout_marginBottom="@dimen/material_padding_double"/>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:indeterminate="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:trackThickness="@dimen/material_padding_half"
        tools:visibility="visible"/>

</androidx.constraintlayout.widget.ConstraintLayout>