<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.fragments.VerifyOtpFragment">

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:trackThickness="@dimen/material_padding_half"
        tools:visibility="visible"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/signInText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_enter_otp_received"
        style="@style/login_text_style"
        android:layout_marginTop="@dimen/material_padding_double"
        android:layout_marginStart="@dimen/material_padding"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/otp_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_otp_here"
        android:layout_margin="@dimen/material_padding"
        app:layout_constraintTop_toBottomOf="@id/signInText">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/otp_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="10"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_submit"
        app:layout_constraintTop_toBottomOf="@id/otp_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_continue"
        android:layout_margin="@dimen/material_padding"/>

</androidx.constraintlayout.widget.ConstraintLayout>